# bazel_rules_fusesoc_2

./: .bazelignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  go.mod
.bcr/: metadata.template.json
.github/workflows/: tag-and-release.yml  test.yml
extensions/: BUILD.bazel  fusesoc_cores.bzl  fusesoc_repo.bzl
integration/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  main.cc
