load(
    "@i_pypi//:requirements.bzl",
    "requirement",
)

# This rule shows that `fusesoc` is indeed installed and working.
genrule(
    name = "test",
    srcs = [ ],
    outs = [ "fusesoc.txt" ],
    tools = [
        "@rules_fusesoc//third_party/fusesoc:run_fusesoc",
        requirement("fusesoc"),
    ],
    cmd = "$(location @rules_fusesoc//third_party/fusesoc:run_fusesoc) --help > $@",
)

filegroup(
    name = "srcs",
    srcs = [
        "@fusesoc_cores//:build/lowrisc_muntjac_core_0.1/src/lowrisc_tl_common_0.1/rtl/tl_pkg.sv",
    ],
)
