module(name = "integration", version="0.0.0")


bazel_dep(name = "rules_fusesoc", version = "0.0.0")
local_path_override(
  module_name = "rules_fusesoc",
  path = "../",
)
fusesoc_cores = use_extension(
  "@rules_fusesoc//extensions:fusesoc_cores.bzl",
  "fusesoc_cores")
fusesoc_cores.library(
  name = "fusesoc-cores",
  url = "https://github.com/fusesoc/fusesoc-cores",
)
fusesoc_cores.core(
  name = "blinky",
)
fusesoc_cores.library(
  name = "muntjac",
  url = "https://github.com/filmil/muntjac",
)
fusesoc_cores.core(
  name = "lowrisc:muntjac:core",
)
use_repo(fusesoc_cores, "fusesoc_cores")


bazel_dep(name = "rules_python", version = "1.6.3")
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "i_pypi",
    requirements_lock = "@rules_fusesoc//third_party/fusesoc:requirements_lock.txt",
    python_version = "3.11",
)
use_repo(pip, "i_pypi")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.11")
python.toolchain(python_version = "3.11")

